# bopwire

./: .gitignore  README.md
.github/workflows/: musicchain_web.yml
bopwire/: CMakeLists.txt
bopwire/docs/: p4-p5-plan.md  scale-architecture-plan.md
bopwire/include/: bopwire.h
bopwire/scripts/: build-node-linux.sh  install-deps-arch.sh  install-deps-debian.sh
bopwire/src/api/: device_attestation.h  rats_api.cpp  rats_api.h  server.cpp  server.h
bopwire/src/art/: album_key.h  art_scraper.cpp  art_scraper.h  sacad_ffi.h
bopwire/src/audio/: fingerprint.cpp  fingerprint.h  ogg_decoder.cpp  ogg_validator.cpp
bopwire/src/capi/: capi.cpp
bopwire/src/consensus/: candidate.cpp  candidate.h
bopwire/src/core/: block.cpp  block.h  chain.cpp  chain.h  transaction.cpp  transaction.h
bopwire/src/crypto/: keystore.cpp  keystore.h
bopwire/src/curation/: collection_curator.cpp  collection_curator.h
bopwire/src/network/: upnp.cpp
bopwire/src/storage/: accumulator.cpp  accumulator.h  database.cpp  database.h  state_prefixes.h
bopwire/src/tokens/: ledger.cpp  ledger.h  mint.cpp  mint.h
bopwire/src/transport/: mc_rats_quic.h
bopwire/src/util/: hw_fingerprint.cpp  hw_fingerprint.h
bopwire/tools/: mini_node.cpp  mini_node_tui.cpp  mini_node_tui.h  monitor_tui.cpp  monitor_tui.h  net_check.cpp  net_check.h  node_main.cpp  node_tui.cpp  node_tui_adapter.cpp  node_wallet.cpp  node_wallet.h  test_sequencer.cpp
bopwire/webplayer/: mock_gateway.py
bopwire/webplayer/deploy/: Caddyfile  publish-frontend.sh
bopwire/webplayer/frontend/: app.js  config.js  dmca.html  index.html  styles.css  wasm-player.js
bopwire/webplayer/webapp/: README.md  index.html  package-lock.json  package.json  vite.config.js
bopwire_player/: pubspec.yaml
bopwire_player/ios/Runner/: GeneratedPluginRegistrant.m
bopwire_player/linux/flutter/: generated_plugins.cmake
bopwire_player/scripts/: build-linux-appimage.sh
musicchain/: ANNOUNCEMENT.md  ARCHITECTURE.md  CMakeLists.txt  README.md  build_openssl_android.sh  build_openssl_android_win.sh  vcpkg.json
musicchain/docs/: ice_audit.md  stun_audit.md  turn_fallback.md  ws_gateway_rate_limits.md  ws_gateway_tls.md  ws_mini_gateway_protocol.md
musicchain/include/: musicchain.h
musicchain/scripts/: _visible-vps-full-node.sh  build-mini-node-linux.sh  build-node-linux.sh  deploy-vps.sh  wipe-and-run-home.ps1
musicchain/src/api/: jsonrpc_server.cpp  jsonrpc_server.h  rats_api.cpp  rats_api.h  routes.h  server.cpp  server.h
musicchain/src/audio/: fingerprint.cpp  fingerprint.h
musicchain/src/capi/: capi.cpp
musicchain/src/consensus/: candidate.cpp  candidate.h  validator.cpp  validator.h
musicchain/src/core/: block.cpp  block.h  chain.cpp  chain.h  merkle.h  transaction.cpp  transaction.h
musicchain/src/crypto/: hash.cpp  (+5 more)
musicchain/tools/: h3_smoke.cpp  library_smoke_cli.cpp  mini_node.cpp  node_main.cpp  node_tui.cpp  node_tui.h
musicchain_player/: README.md  ffigen.yaml  pubspec.yaml  win_player.err
musicchain_player/android/app/src/main/cpp/: CMakeLists.txt  chromaprint_jni.cpp  musicchain_android.c
musicchain_player/docs/: offline_play_proof.md
musicchain_player/lib/: main.dart
musicchain_player/native/: CMakeLists.txt
musicchain_player/scripts/: build-linux-player.sh
musicchain_player/test/: widget_test.dart
musicchain_player/tool/: account_creation_smoke.dart  e2e_streaming_smoke.dart  full_path_smoke.dart  handshake_smoke.dart  library_smoke.dart  mint_smoke.dart  no_node_smoke.dart  playback_smoke.dart  public_addr_smoke.dart  rats_smoke.dart  registration_smoke.dart  stun_observe_smoke.dart
musicchain_player/windows/: CMakeLists.txt
musicchain_web/: .gitignore  CMakeLists.txt  README.md  STATUS.md  build.sh  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
musicchain_web/build_chain/: CMakeCache.txt  Makefile  chain.js  chain.wasm  cmake_install.cmake  compile_commands.json
musicchain_web/build_chain/chromaprint_config/: config.h
musicchain_web/build_chain/libwally_build/: Makefile  cmake_install.cmake  config.h
musicchain_web/build_chain/libwally_build/src/: Makefile  cmake_install.cmake
musicchain_web/build_chain/libwally_build/src/secp256k1/: CTestTestfile.cmake  Makefile  cmake_install.cmake
musicchain_web/build_chain/libwally_build/src/secp256k1/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
musicchain_web/build_chromaprint/: CMakeCache.txt  Makefile  chromaprint.js  chromaprint.wasm  cmake_install.cmake  compile_commands.json
musicchain_web/build_chromaprint/libwally_build/: Makefile  cmake_install.cmake
musicchain_web/build_chromaprint/libwally_build/src/: Makefile  cmake_install.cmake
musicchain_web/build_chromaprint/libwally_build/src/secp256k1/: CTestTestfile.cmake  Makefile  cmake_install.cmake
musicchain_web/build_chromaprint/libwally_build/src/secp256k1/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
musicchain_web/native/: chain_glue.cpp  chain_shim.cpp  chromaprint_glue.c  wallet_glue.c
musicchain_web/public/: index.html  main.ts  style.css
musicchain_web/src/: audio_bridge.ts  chain.ts  discovery.ts  fingerprinter.ts  heartbeat.ts  main.ts  mini_node_pool.ts  node_client.ts  player.ts  player_controller.ts  playlists.ts  queue.ts  storage.ts  stream.ts  username.ts  username_register.ts  verbs.ts  wallet.ts
musicchain_web/src/offline/: heartbeat_capture.ts  submit_service.ts
musicchain_web/src/screens/: gate.ts  home.ts  library.ts  now_playing.ts  playlists.ts  search.ts  settings.ts  wallet.ts  wallet_first_launch.ts  wallet_gate.ts  wallet_login.ts
musicchain_web/src/widgets/: album_card.ts  album_view.ts  artist_card.ts  artist_view.ts  mini_player.ts  playlist_view.ts  song_row.ts
musicchain_web/tests/: mini_gateway.smoke.cjs  qrcode.test.ts  rats.smoke.cjs  stream.smoke.cjs  wallet.test.ts
scripts/: _common-windows.ps1  build-mini-node-linux.sh  build-node-linux.sh  build-node-windows.ps1  build-player-android.ps1  build-player-windows.ps1  install-mini-node-linux.sh  install-node-linux.sh
(+133 files in other folders)
